<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="MOD_Crane_I_stSensor" Id="{381e2ea0-f150-4a3e-9061-56756bc44cb2}">
    <Declaration><![CDATA[TYPE MOD_Crane_I_stSensor :
STRUCT
	Blocked : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>