<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="MOD_Crane_stMotorOutput" Id="{c6dd3985-f911-4dc9-9057-83aca77ca140}">
    <Declaration><![CDATA[TYPE MOD_Crane_stMotorOutput :
STRUCT
	Command : INT;
	MoveLeft : BOOL;
	MoveRight : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>